DevTools: Fix how JavaScriptOutlineDialog works when the function name is too long.
R=pfeldman, lushnikov

Review URL: https://codereview.chromium.org/189913008

git-svn-id: svn://svn.chromium.org/blink/trunk@168917 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/filteredItemSelectionDialog.css
+++ b/front_end/filteredItemSelectionDialog.css
@@ -23,18 +23,6 @@
     color: rgb(95, 95, 95);
 }
 
-.filtered-item-list-dialog-subtitle {
-    color: rgb(155, 155, 155);
-}
-
-.filtered-item-list-dialog-item.one-row .filtered-item-list-dialog-subtitle {
-    float: right;
-}
-
-.filtered-item-list-dialog-item.two-rows {
-    border-bottom: 1px solid rgb(235, 235, 235);
-}
-
 .filtered-item-list-dialog-item.selected {
     background-color: rgb(224, 224, 224);
 }
@@ -42,4 +30,25 @@
 .filtered-item-list-dialog-item span.highlight {
     color: #222;
     font-weight: bold;
+}
+
+.filtered-item-list-dialog-item .filtered-item-list-dialog-title {
+    flex: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.filtered-item-list-dialog-item .filtered-item-list-dialog-subtitle {
+    flex: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: rgb(155, 155, 155);
+}
+
+.filtered-item-list-dialog-item.one-row {
+    display: flex;
+}
+
+.filtered-item-list-dialog-item.two-rows {
+    border-bottom: 1px solid rgb(235, 235, 235);
 }
